Shenandoah: SIGSEGV in Type::meet_helper() at barrier expansion time

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 12
    • Affects Version/s: 8-shenandoah, 11-shenandoah, 12
    • Component/s: hotspot
    • b28

          # A fatal error has been detected by the Java Runtime Environment:
           #
           # SIGSEGV (0xb) at pc=0x00007fd4dcfbb81d, pid=58552, tid=58635
           #
           # JRE version: OpenJDK Runtime Environment (13.0) (build 13-internal+0-adhoc.zgu.jdk)
           # Java VM: OpenJDK 64-Bit Server VM (13-internal+0-adhoc.zgu.jdk, mixed mode, tiered, shenandoah gc, linux-amd64)
           # Problematic frame:
           # V [libjvm.so+0xea281d] Type::meet_helper(Type const*, bool) const+0xd
           
           V [libjvm.so+0xea281d] Type::meet_helper(Type const*, bool) const+0xd
           V [libjvm.so+0xd56754] ShenandoahBarrierNode::needs_barrier_impl(PhaseGVN*, ShenandoahBarrierNode*, Node*, Node*, bool, Unique_Node_List&) [clone .constprop.195]+0x144
           V [libjvm.so+0xd56a32] ShenandoahBarrierNode::needs_barrier_impl(PhaseGVN*, ShenandoahBarrierNode*, Node*, Node*, bool, Unique_Node_List&) [clone .constprop.195]+0x422
           V [libjvm.so+0xd5947c] ShenandoahBarrierNode::Identity_impl(PhaseGVN*)+0x12c
           V [libjvm.so+0xd5963c] ShenandoahReadBarrierNode::Identity(PhaseGVN*)+0x1c
           V [libjvm.so+0xc51177] PhaseIterGVN::transform_old(Node*)+0x257
           V [libjvm.so+0xc4df8c] PhaseIterGVN::optimize()+0x1ac
           V [libjvm.so+0xa9e71b] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0xa1b
           V [libjvm.so+0x63a340] Compile::optimize_loops(PhaseIterGVN&, LoopOptsMode)+0x200
           V [libjvm.so+0xd5885b] ShenandoahWriteBarrierNode::expand(Compile*, PhaseIterGVN&)+0x24b
           V [libjvm.so+0xcece7f] ShenandoahBarrierSetC2::expand_barriers(Compile*, PhaseIterGVN&) const+0xf
           V [libjvm.so+0x63b27e] Compile::Optimize()+0xa4e
           V [libjvm.so+0x63c9e8] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xfd8
           V [libjvm.so+0x5644a6] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xe6
           V [libjvm.so+0x6465c6] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x396
           V [libjvm.so+0x647a28] CompileBroker::compiler_thread_loop()+0x528
           V [libjvm.so+0xe8ad5b] JavaThread::run()+0x1bb
           V [libjvm.so+0xe88d8a] Thread::call_run()+0x17a
           V [libjvm.so+0xbf5cc8] thread_native_entry(Thread*)+0xf8

              Assignee:
              Roland Westrelin
              Reporter:
              Roland Westrelin
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: