8217043: Shenandoah: SIGSEGV in Type::meet_helper() at barrier expansion time

Reviewed-by: shade, rkennke, thartmann